syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "JobService.Grpc.Protos";

service JobAdmin {
    rpc NotifyJob (NotifyJobRequest) returns (NotifyJobResponse);
}

message NotifyJobRequest {
    int32 job_id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string owner_id = 5;
    google.protobuf.Timestamp created_at = 6;
    string action = 7; // Create, Update, Delete
}

message NotifyJobResponse {
    bool success = 1;
    string message = 2;
}

