syntax = "proto3";

option csharp_namespace = "JobService.Grpc.Protos";

service JobAdmin {
  // Approve job
  rpc ApproveJob (ApproveJobRequest) returns (ApproveJobResponse);

  // Update job
  rpc UpdateJob (UpdateJobRequest) returns (UpdateJobResponse);

  // Delete job
  rpc DeleteJob (DeleteJobRequest) returns (DeleteJobResponse);
}

message ApproveJobRequest {
  int32 job_id = 1;  // Or int32 jobId = 1; 
}

message ApproveJobResponse {
  bool success = 1;
  string message = 2;
}

message UpdateJobRequest {
  int32 job_id = 1;
  string title = 2;
  string description = 3;
}

message UpdateJobResponse {
  bool success = 1;
  string message = 2;
}

message DeleteJobRequest {
  int32 job_id = 1;
}

message DeleteJobResponse {
  bool success = 1;
  string message = 2;
}